# e-learning-platform

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
api_examples/: enroll_all.py
apps/courses/: admin.py  fields.py  forms.py  models.py  urls.py  views.py
apps/courses/api/: serializers.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_content_file_image_text_video.py  0003_alter_content_options_alter_module_options_and_more.py  0004_course_students.py
apps/courses/templates/: base.html
apps/courses/templates/courses/course/: detail.html  list.html
apps/courses/templates/courses/manage/content/: form.html
apps/courses/templates/courses/manage/course/: delete.html  form.html  list.html
apps/courses/templates/courses/manage/module/: content_list.html  formset.html
apps/courses/templates/registration/: logged_out.html  login.html
apps/courses/templatetags/: course.py
apps/students/: forms.py  urls.py  views.py
apps/students/templates/students/course/: detail.html  list.html
apps/students/templates/students/student/: registration.html
courses/fixtures/: subjects.json
e_learning/: settings.py  urls.py
